<resources>
    <string name="app_name">Currency Exchange "Wiek"</string>
    <string name="welcome">Welcome</string>
    <string name="guestName">Your name</string>
    <string name="loginButton">Login</string>
    <string name="confirmation">Confirm code</string>
    <string name="error">Empty field</string>
    <string name="errorDate">Date of birth</string>
    <string name="grt">Hello</string>
    <string name="gallery_activity">Gallery</string>
    <string name="maps_activity">Location</string>
    <string name="exchange_activity">Calculator Exchange</string>
    <string name="continue_button">Next</string>
    <string name="firstLocation">Currency Exchange Service "Wiek"</string>
    <string name="firstStreet">"CH Galeria Wileńska, street Targowa 72, 03-734 "</string>
    <string name="secondLocation">Currency Exchange Service "Wiek II"</string>
    <string name="secondStreet">"CH Arkadia, street Aleja Jana Pawła II 82, 00-175 "</string>
    <string name="select">Select Date</string>
    <string name="exchangeButton">Accept</string>
    <string name="calculate">Calculate</string>
    <string name="in">in</string>
    <string name="incompleteDate">Minimum age is 14 years</string>
    <string name="emptyDate">Empty field</string>
    <string name="value">Your value</string>
    <string name="toggleButtonOn">ON</string>
    <string name="toggleButtonOf">OF</string>
    <string name="sameCurr">Can\'t be the same currency</string>
    <string-array name="bg">
        <item>Day</item>
        <item>Night</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="surname">Bolishchuk 42352</string>
</resources>
