...
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
...
